<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/appBackgroundcolor"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ketannayak.trialapp.ViewAllStutis"
    tools:showIn="@layout/activity_view_all_stutis">


    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Lakshminarayana_stuti_button"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:onClick="LakshminarayanStutiView"
        android:layout_marginTop="10sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Ramnath_stuti_button"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:onClick="RamnathStutiView"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Shantadurga_stuti_button"
        android:onClick="ShantadurgaStutiView"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Ganapati_stuti_button"
        android:onClick="GanapatiStutiView"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Kamakshi_stuti_button"
        android:onClick="KamakshiStutiView"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Betal_stuti_button"
        android:onClick="BetalStutiView"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Kalabhairav_stuti_button"
        android:onClick="KalabhairavStutiView"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/Magalashtakam_stuti_button"
        android:onClick="MangalashtakamStutiView"
        android:textColor="@color/buttonTextcolor"
        android:background="@color/buttonBackground"
        android:textAllCaps="false"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="15sp"
        android:paddingBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
