<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundcolor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my">


    <ImageView
        android:id ="@+id/homeimage"
        android:layout_width="wrap_content"
        android:layout_height ="0dp"
        android:layout_weight="6"
        android:src = "@drawable/ramnath_devasthan"
        android:adjustViewBounds="true"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="15sp"
        android:scaleType="fitXY"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight ="2"
        android:id ="@+id/homepage_title"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textColor="@color/buttonBackground"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="0sp"
        android:paddingBottom="0sp"
        android:text="@string/homepage_title"
        android:layout_gravity="center_horizontal"/>
        
        <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/button_allStutis"
        android:onClick="viewAllStutis"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonTextcolor"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:paddingTop="0sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200sp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/button_settings"
        android:onClick="viewSettings"
        android:textColor="@color/buttonTextcolor"
        android:background="@color/buttonBackground"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        android:paddingBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight ="1"
        android:id ="@+id/copyright_text"
        android:textSize="8sp"
        android:textAllCaps="true"
        android:layout_marginBottom="15sp"
        android:text="@string/copyright_text"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
